--- a/Frontend/Frontend/Components/Pages/Courses.razor
+++ b/Frontend/Frontend/Components/Pages/Courses.razor
@@ -74,7 +74,7 @@
     {
         try
         {
-            courses = await Http.GetFromJsonAsync<CourseModel[]>("courseprovider-win23jsbackend-oliverml.azurewebsutes.net/api/courses");
+            courses = await Http.GetFromJsonAsync<CourseModel[]>(Environment.GetEnvironmentVariable("COURSES_URI"));
             //courseprovider-win23jsbackend-oliverml.azurewebsutes.net/api/courses
             //https://localhost:7056/api/courses
         }
