--- a/Frontend/Frontend/Components/Sections/AccountProfileAvatar.razor
+++ b/Frontend/Frontend/Components/Sections/AccountProfileAvatar.razor
@@ -60,7 +60,7 @@ else
 
             try
             {
-                var response = await Http.PostAsync("https://fileprovider-win23jsbackend-oliverml.azurewebsites.net/api/upload", content);
+                var response = await Http.PostAsync(Environment.GetEnvironmentVariable("FILEPROVIDER_UPLOAD_PROFILE_URI"), content);
                 if (response.IsSuccessStatusCode)
                 {
 
