--- a/Frontend/Frontend/Components/Layout/ManageLayout.razor
+++ b/Frontend/Frontend/Components/Layout/ManageLayout.razor
@@ -4,7 +4,7 @@
 <section class="account-details">
     <div class="container">
         <aside>
-            <Frontend.Components.Sections.AccountProfileAvatar />
+            <Frontend.Components.Sections.AccountProfileAvatar user="user" />
             <ManageNavMenu />
         </aside>
         <div class="content">
@@ -13,4 +13,22 @@
     </div>
 </section>
 
+@code {
+    [CascadingParameter]
+    private ApplicationUser user { get; set; } = default!;
+
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; } = default!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await LoadUserDataAsync();
+    }
+
+    private async Task LoadUserDataAsync()
+    {
+        user = await UserManager.GetUserAsync(HttpContext.User) ?? null!;
+
+    }
+}
 
