--- a/Frontend/Frontend/Components/Layout/ManageNavMenu.razor
+++ b/Frontend/Frontend/Components/Layout/ManageNavMenu.razor
@@ -4,42 +4,22 @@
 @inject NavigationManager NavigationManager
 
 
-<AuthorizeView>
-    <Authorized>
-        <NavLink href="/account/details" class="btn btn-theme" Match="NavLinkMatch.All">
-            <i class="fa-regular fa-cog"></i><span>Account Details</span>
-        </NavLink>
-
-        <div class="nav-item px-3">
-            <form id="logoutForm" action="/Account/LogOut" method="post">
-                <AntiforgeryToken />
-                <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                <button type="submit" class="nav-link">
-                    <span class="fa-regular fa-arrow-right-from-bracket" aria-hidden="true"></span> Logout
-                </button>
-            </form>
-        </div>
-
-    </Authorized>
-</AuthorizeView>
+<nav>
+    <NavLink href="/account/details" class="btn btn-theme" Match="NavLinkMatch.All">
+        <i class="fa-regular fa-cog"></i><span>Account Details</span>
+    </NavLink>
+    <NavLink @onclick="HandleSignOut" class="btn-nav">
+        <i class="fa-regular fa-arrow-right-from-bracket"></i><span>Sign Out</span>
+    </NavLink>
+</nav>
+       
 
 @code {
-    private string currentUrl;
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; } = default;
 
-    protected override void OnInitialized()
+    private async Task HandleSignOut()
     {
-        currentUrl = NavigationManager.ToBaseRelativePath(NavigationManager.Uri);
-        NavigationManager.LocationChanged += OnLocationChanged;
-    }
-
-    private void OnLocationChanged(object sender, LocationChangedEventArgs e)
-    {
-        currentUrl = NavigationManager.ToBaseRelativePath(e.Location);
-        StateHasChanged();
-    }
-
-    public void Dispose()
-    {
-        NavigationManager.LocationChanged -= OnLocationChanged;
+        await SignInManager.SignOutAsync();
     }
 }
