--- a/Frontend/Frontend/Components/Pages/Account/Index.razor
+++ b/Frontend/Frontend/Components/Pages/Account/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/account/details"
 
+@attribute [StreamRendering]
+
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using Frontend.Data
@@ -31,7 +33,8 @@
 </div>
 
 @code {
-    private ApplicationUser user = default!;
+    [CascadingParameter]
+    private ApplicationUser? user { get; set; } 
     private string? username;
     private string? phoneNumber;
 
@@ -41,28 +44,9 @@
     [SupplyParameterFromForm]
     private InputModel Input { get; set; } = new();
 
-    protected override async Task OnInitializedAsync()
-    {
-        user = await UserManager.GetUserAsync(HttpContext.User) ?? null!;
-        username = await UserManager.GetUserNameAsync(user);
-        phoneNumber = await UserManager.GetPhoneNumberAsync(user);
-
-        Input.PhoneNumber ??= phoneNumber;
-    }
-
     private async Task OnValidSubmitAsync()
     {
-        if (Input.PhoneNumber != phoneNumber)
-        {
-            var setPhoneResult = await UserManager.SetPhoneNumberAsync(user, Input.PhoneNumber);
-            if (!setPhoneResult.Succeeded)
-            {
-                
-            }
-        }
-
-        await SignInManager.RefreshSignInAsync(user);
-        
+        await SignInManager.RefreshSignInAsync(user!);
     }
 
     private sealed class InputModel
