--- a/Frontend/Frontend/Components/Sections/AccountProfileAvatar.razor
+++ b/Frontend/Frontend/Components/Sections/AccountProfileAvatar.razor
@@ -27,17 +27,13 @@ else
 
 
 @code {
-    private ApplicationUser user = default!;
+    [Parameter]
+    public ApplicationUser user { get; set; } = default!;
     private MultipartFormDataContent uploadModel = new MultipartFormDataContent();
     private IBrowserFile? selectedFile;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
-
-    protected override async Task OnInitializedAsync()
-    {
-        await LoadUserDataAsync();
-    }
 
     private void HandleFileSelected(InputFileChangeEventArgs e)
     {
@@ -78,3 +74,5 @@ else
 
 
 }
+
+
